--- a/views/home.html
+++ b/views/home.html
@@ -15,15 +15,15 @@
 
   <!--nav -->
   
-  <nav class="navbar navbar-expand-lg navbar-light d-block d-sm-none">
+  <nav class="navbar navbar-expand-lg navbar-light d-block d-lg-none">
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarTogglerDemo01" aria-controls="navbarTogglerDemo01" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
     </button>
     <div class="collapse navbar-collapse" id="navbarTogglerDemo01">
-        <!-- <input class="form-control mr-sm-2 token-input" type="search" placeholder="Search" aria-label="Search">
+        <input class="form-control mr-sm-2 token-input" type="search" placeholder="Search" aria-label="Search">
         <button class="btn btn-outline-success my-2 my-sm-0 buscar" type="button">
             <i class="fas fa-search"></i>
-        </button> -->
+        </button>
       
       <div class="btn-group grupo-filtro">
         <button type="button" class="btn filtro">Filtrar por</button>
@@ -59,7 +59,7 @@
 
   <!--nav desktop-->
 
-  <nav class="navbar navbar-light justify-content-between d-none d-sm-block">
+  <nav class="navbar navbar-light justify-content-between d-none d-lg-block">
       <a class="navbar-brand">
       <img src="../assets/docs/logo-white.png" alt="" class="logo-white"> </a>
       <div class="form-inline right">
@@ -79,7 +79,7 @@
   </div>
 
   <!--Búsqueda y comparación-->
-<div class="over container  mt-3 d-none d-sm-block">
+<div class="over container  mt-3 d-none d-lg-block">
   <div class="float-r">
      
     
