--- a/views/home.html
+++ b/views/home.html
@@ -114,10 +114,8 @@
     
       <div class="row">
           <div class="col-12 display-container mb-3">
-             <a href="formulario.html"><i class="fas fa-plus-circle icon-plus"></i></a> 
-              <button class="btn  btn-comparar">
-                Comparar
-              </button>
+            <a class="btn-add" href="formulario.html">Agregar Convenio</a>
+            <button class="btn btn-comparar">Comparar</button>
       
             </div>
       </div>
