--- a/css/home.css
+++ b/css/home.css
@@ -207,8 +207,15 @@ input[type=checkbox]
   align-items: center;
   height: 30vh;
   background-size: cover;
+  background-position: center center;
   background-repeat: no-repeat; 
-  background-image: url("../assets/images/law.jpg");
+  background-image: url("../assets/images/law.jpeg");
+}
+
+
+.text-logro {
+  margin-left: 35px;
+  font-size: 1.5em;
 }
 
 .back-gris {
