--- a/views/home.html
+++ b/views/home.html
@@ -73,7 +73,7 @@
   <div class="container-fluid">
     <div class="row">
       <div class="col-12 img-mobile">
-        <p class="text-blue-miranda">Creando acciones conjuntas para el beneficio mutuo</p>
+        <p class="text-white">Creando acciones conjuntas para el beneficio mutuo</p>
       </div>
     </div>
   </div>
@@ -119,6 +119,8 @@
             <button class="btn btn-comparar" id="comparar">Comparar</button>
       
             </div>
+            
+<p class="text-logro text-gold-amado">Nuestros logros</p>
       </div>
         
       
