--- a/views/compare.html
+++ b/views/compare.html
@@ -9,7 +9,7 @@
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.0/css/bootstrap.min.css" integrity="sha384-9gVQ4dYFwwWSjIDZnLEWnxCjeSWFphJiwGPXr1jddIhOegiu1FwO5qRGvFXOdJZ4" crossorigin="anonymous">
   <link rel="stylesheet" href="../css/token-input.css" type="text/css" />
   <link rel="stylesheet" href="../css/home.css">
-
+  <script src="https://unpkg.com/jspdf@latest/dist/jspdf.min.js"></script>
   <title>Home</title>
 </head>
 <body>
@@ -82,9 +82,9 @@
 
     <div class="row">
       <div class="col-12 display-container mb-3">
-        <button class="btn  btn-comparar" id="ViewReport">
+        <a class="btn btn-comparar" id="ViewReport" href="javascript:window.print()">
            Ver Reporte
-        </button>
+        </a>
 
       </div>
     </div>
@@ -149,7 +149,6 @@
     </div>
   </div>
   </div>
-  <script src="../jspdf/dist/jspdf.min.js"></script>
   <script src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
   <script defer src="https://use.fontawesome.com/releases/v5.0.10/js/all.js" integrity="sha384-slN8GvtUJGnv6ca26v8EzVaR9DC58QEwsIk9q1QXdCU8Yu8ck/tL/5szYlBbqmS+"
     crossorigin="anonymous"></script>
@@ -159,7 +158,7 @@
     crossorigin="anonymous"></script>
   <script src="https://www.gstatic.com/firebasejs/4.8.1/firebase.js"></script>
   <script type="text/javascript" src="../js/jquery.tokeninput.js"></script>
-  <script src="../js/reportes.js"></script>
+  <script src="../js/report.js"></script>
   <script src="../js/compare.js"></script>
 
 
