--- a/views/formulario.html
+++ b/views/formulario.html
@@ -1,28 +1,32 @@
 <html lang="en">
-  
-  <head>
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <link href="https://fonts.googleapis.com/css?family=Roboto:500" rel="stylesheet">
-    <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet" integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous">
-    <link href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
-    <!--Importando bootstrap -->
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.0/css/bootstrap.min.css" integrity="sha384-9gVQ4dYFwwWSjIDZnLEWnxCjeSWFphJiwGPXr1jddIhOegiu1FwO5qRGvFXOdJZ4" crossorigin="anonymous">
-    <link rel="stylesheet" href="../css/formulario.css">
-    <title>Nuevo convenio</title>
-  </head>
-  
-  <body>
-    <div class="main">
-      <div class="container-fluid container-form">
-        <div class="row">
-          <div class="col-12 col-md-5 flex-logo">
-           <a href="home.html"><i class="fas fa-arrow-circle-left icono"></i></a>
-            <img src="../assets/docs/logo.png" class="img-fluid logo mx-auto d-block" alt="Responsive image">
-            <p class="text-center text-blue-miranda text-p  d-none d-sm-block">Enfocados en la prevención y solución de conflictos laborales.</p>
-          </div>
+
+<head>
+  <meta charset="utf-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <link href="https://fonts.googleapis.com/css?family=Roboto:500" rel="stylesheet">
+  <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet" integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN"
+    crossorigin="anonymous">
+  <link href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
+  <!--Importando bootstrap -->
+  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.0/css/bootstrap.min.css" integrity="sha384-9gVQ4dYFwwWSjIDZnLEWnxCjeSWFphJiwGPXr1jddIhOegiu1FwO5qRGvFXOdJZ4"
+    crossorigin="anonymous">
+  <link rel="stylesheet" href="../css/formulario.css">
+  <title>Nuevo convenio</title>
+</head>
+
+<body>
+  <div class="main">
+    <div class="container-fluid container-form">
+      <div class="row">
+        <div class="col-12 col-md-5 flex-logo">
+          <a href="home.html">
+            <i class="fas fa-arrow-circle-left icono"></i>
+          </a>
+          <img src="../assets/docs/logo.png" class="img-fluid logo mx-auto d-block" alt="Responsive image">
+          <p class="text-center text-blue-miranda text-p  d-none d-sm-block">Enfocados en la prevención y solución de conflictos laborales.</p>
+        </div>
         <!-- formulario de inicio de sesión-->
         <div class="col-12 col-md-7">
           <h3 class="text-gold-amado text-center text-upper margen">Convenio colectivo</h3>
@@ -74,29 +78,58 @@
                 </div>
 
                 <div class="btn-container">
-                <button type="button" class="btn btn-nuevo btn-block">Nuevo campo </button>
-                <div class="custom-file">
-                  <input type="file" class="custom-file-input" id="customFileLang" lang="es">
-                  <label class="custom-file-label btn-pdf" for="customFileLang">Adjuntar PDF</label>
+                  <button type="button" class="btn btn-nuevo btn-block">Nuevo campo </button>
+                  <div class="custom-file">
+                    <input type="file" name="fichero" value="" id="fichero">
+
+                    <div class="hidden-xl-down" id="progreso">
+                      <div class="progress">
+                        <div class="progress-bar" role="progressbar" aria-valuenow="10" aria-valuemin="0" aria-valuemax="100" id="barra-progreso"
+                          style="width:0%">
+
+                        </div>
+                      </div>
+                    </div>
+
+                  </div>
                 </div>
-              </div>
-              <div class="container-register">
-                <button type="button" class="btn btn-registrar btn-block text-upper" id="new-convenio">Registrar </button>
-              </div>  
-              
+                <div class="container-register">
+                  <button type="button" class="btn btn-registrar btn-block text-upper" id="new-convenio">Registrar </button>
+                </div>
+
             </div>
           </div>
         </div>
       </div>
-    </div>  
+    </div>
   </div>
-  <script defer src="https://use.fontawesome.com/releases/v5.0.10/js/all.js" integrity="sha384-slN8GvtUJGnv6ca26v8EzVaR9DC58QEwsIk9q1QXdCU8Yu8ck/tL/5szYlBbqmS+" crossorigin="anonymous"></script>
-    <script src="https://www.gstatic.com/firebasejs/4.12.1/firebase.js"></script>
-    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.0/umd/popper.min.js" integrity="sha384-cs/chFZiN24E4KMATLdqdvsezGxaGsi4hLGOzlXwp5UZB1LY//20VyM2taTB4QvJ" crossorigin="anonymous"></script>
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.0/js/bootstrap.min.js" integrity="sha384-uefMccjFJAIv6A+rW+L4AHf99KvxDjWSu1z9VI8SKNVmz4sk7buKt/6v9KI65qnm" crossorigin="anonymous"></script> 
-    
-    <script src="../js/formulario.js"></script>
-  </body>
-  
-  </html>
+
+  <div class="modal" id="success" tabindex="-1" role="dialog">
+      <div class="modal-dialog" role="document">
+        <div class="modal-content">
+          <div class="modal-header">
+            <h5 class="modal-title"></h5>
+            <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+              <span aria-hidden="true">&times;</span>
+            </button>
+          </div>
+          <div class="modal-body">
+            <p>Se ha registrado Correctamente</p>
+          </div>
+        </div>
+      </div>
+    </div>
+  <script defer src="https://use.fontawesome.com/releases/v5.0.10/js/all.js" integrity="sha384-slN8GvtUJGnv6ca26v8EzVaR9DC58QEwsIk9q1QXdCU8Yu8ck/tL/5szYlBbqmS+"
+    crossorigin="anonymous"></script>
+  <script src="https://www.gstatic.com/firebasejs/4.12.1/firebase.js"></script>
+  <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
+    crossorigin="anonymous"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.0/umd/popper.min.js" integrity="sha384-cs/chFZiN24E4KMATLdqdvsezGxaGsi4hLGOzlXwp5UZB1LY//20VyM2taTB4QvJ"
+    crossorigin="anonymous"></script>
+  <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.0/js/bootstrap.min.js" integrity="sha384-uefMccjFJAIv6A+rW+L4AHf99KvxDjWSu1z9VI8SKNVmz4sk7buKt/6v9KI65qnm"
+    crossorigin="anonymous"></script>
+
+  <script src="../js/formulario.js"></script>
+</body>
+
+</html>
