--- a/views/compare.html
+++ b/views/compare.html
@@ -69,45 +69,20 @@
     </nav>
 
   <!--imagen-->
+  
 
   <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
-    <ol class="carousel-indicators">
-      <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
-      <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
-      <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
-    </ol>
     <div class="carousel-inner">
-      <!-- <div class="carousel-item active">
-        <img class="d-block w-100 carrusel-img img-fluid" src="http://globbpartner.com/wp-content/uploads/2016/04/digital.jpg" alt="First slide">
-      </div> -->
       <div class="carousel-item active">
         <img class="d-block w-100 carrusel-img img-fluid" src="../assets/images/law.jpeg" alt="Third slide">
         <div class="opacity"></div>
-        <div class="carousel-caption d-none d-md-block">
-          <p class="text-white">Creando acciones conjuntas para el beneficio mutuo</p>
+        <div class="carousel-caption d-none d-md-block carousel-principal">
+          <p class="text-white ">Creando acciones conjuntas para el beneficio mutuo</p>
         </div>
       </div>
-      <div class="carousel-item">
-        <img class="d-block w-100 carrusel-img img-fluid" src="../assets/images/doc4.jpg" alt="Third slide">
-        <div class="carousel-caption d-none d-md-block">
-          <p class="text-white">Cuando nuestros clientes solicitan asesoría de nuestros socios, en realidad la reciben de todo un equipo.</p>
-          </div>
-      </div>
-      <div class="carousel-item">
-        <img class="d-block w-100 carrusel-img img-fluid" src="../assets/images/doc3.jpg" alt="Third slide">
-        
-        <div class="carousel-caption d-none d-md-block">
-          <p class="text-white">Actuamos responsablemente en relación con la sociedad y el planeta en que vivimos.</p>
-          </div>
-      </div>
     </div>
-    <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
-      <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-      <span class="sr-only">Previous</span>
-    </a>
-    <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
-      <span class="carousel-control-next-icon" aria-hidden="true"></span>
-      <span class="sr-only">Next</span>
+    <a class="carousel-control-prev" href="home.html" id="prev-button" role="button" data-slide="prev">
+      <i class="fas fa-arrow-circle-left icono"></i>
     </a>
   </div>
   <!-- <div class="container-fluid">
@@ -119,18 +94,17 @@
   </div> -->
 
 
-  <div class="container">
+  <div class="container mobile-container">
 
-    <div class="row mr-0">
+    <div class="row mr-0 ml-0">
       <div class="col-12 display-container mb-3">
-        <button class="btn  btn-comparar" id="ViewReport">
-           Ver Reporte
-        </button>
-
+        <a class="btn  btn-comparar text-white" id="ViewReport">
+          <i class="far fa-arrow-alt-circle-down mr-3"></i>Descargar
+        </a>
         <!-- <a href="home.html" class="btn volver">Volver</a> -->
-        <a class="btn btn-border" id="ViewReport" href="javascript:window.print()">
+        <a class="btn btn-border left-button" id="ViewReport" href="javascript:window.print()">
           <i class="fas fa-print mr-3"></i>Imprimir
-      </a>
+        </a>
       </div>
     </div><br>
 
